--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,158 @@
-.App {
+/* All style are here */
+
+.container {
+  background-color: #080808;
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+form {
+  background-color: #fff;
+  width: min(90%, 400px);
+  display: flex;
+  flex-direction: column;
+  gap: 1.25rem;
+  padding: 1.85rem;
+  margin: 0 auto;
+  border-radius: 0.75rem;
+  position: relative;
+}
+
+.form__body {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.form__input {
+  display: flex;
+  flex-direction: column;
+  gap: 0.3rem;
+}
+
+.form__body input {
+  padding: 0.5rem;
+  font-family: inherit;
+  border: 1px solid rgba(0, 0, 0, 0.4);
+  border-radius: 0.3rem;
+  overflow: hidden;
+}
+
+.small {
+  font-size: 0.75rem;
+  color: rgba(0, 0, 0, 0.6);
+}
+
+a,
+a:visited {
+  text-decoration: none;
+  color: rgb(55, 100, 224);
+  cursor: pointer;
+}
+
+a:hover {
+  text-decoration: underline;
+  text-decoration-style: dotted;
+}
+
+.btn {
+  width: 100%;
+  padding: 0.75rem;
+  background-color: #000;
+  color: #fff;
+  border-radius: 0.3rem;
+  border: none;
+  cursor: pointer;
+  transition: opacity 0.2s ease;
+  font-weight: 700;
+}
+
+.btn:hover {
+  opacity: 0.8;
+}
+
+.btn:active {
+  transform: scale(0.95);
+}
+
+.form__footer {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.social-icons {
   display: flex;
+  justify-content: space-around;
+  margin-bottom: 2rem;
+}
+
+.social-icons > a {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  background-color: rgba(55, 100, 224, 0.2);
+  transition: transform 0.2s ease-in;
+}
+
+.social-icons > a:hover {
+  transform: scale(1.1);
+}
+
+.github,
+.twitter,
+.youtube {
+  min-height: 100%;
+  min-width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.check {
+  opacity: 0.5;
+  font-size: 0.65rem;
+  display: flex;
+  gap: 0.3rem;
+  align-items: center;
+}
+
+.correct {
+  opacity: 1;
+  color: rgb(97, 197, 57);
+}
+
+.wrong {
+  opacity: 1;
+  color: rgb(214, 73, 73);
+}
+
+/* Success view */
+.success__view {
+  position: absolute;
+  background-color: #fff;
+  padding: 2rem;
+  inset: 0;
+  z-index: 99;
+  border-radius: 0.3rem;
+  display: flex;
+  pointer-events: all;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  animation: fadeIn 0.3s linear forwards;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
+@keyframes fadeIn {
   from {
-    transform: rotate(0deg);
+    opacity: 0;
   }
   to {
-    transform: rotate(360deg);
+    opacity: 1;
   }
+}
+
+.success__message {
+  margin-bottom: 3rem;
 }
